--- a/projects/generalized_planning/index.html
+++ b/projects/generalized_planning/index.html
@@ -46,13 +46,23 @@
               <b>Quick Start</b>
             </p>
             <ol style="margin: 0; padding-left: 18px; font-size: 13.5px; color: #333; line-height: 1.6;">
-            <li><mark
-              style="color:red;"><b>NEW!</b></mark> NSF EAGER: Demonstrating a Compact Foundation Model for Planning-Like(PL) Tasks for Next Generation Trusted Applications <a href="https://ai4society.github.io/planfm/" target="_blank">[Project Website]</a></li>
-            <li><mark
-              style="color:red;"><b>NEW!</b></mark> SOFAI Lab: A Hands-On Guide to Building Neurosymbolic Systems with Metacognitive Control @ AAAI-25 <a href="https://github.com/ai4society/sofai_tool/tree/main" target="_blank">[GitHub]</a></li>
-            <li>Harnessing Large Language Models for Planning: A Lab on Strategies for Success and Mitigation of Pitfalls @ AAAI-24 <a href="https://github.com/VishalPallagani/LLMsforPlanningLab-AAAI24" target="_blank">[GitHub]</a></li>
-            <li>Building a Plan Ontology to Represent and Exploit Planning Knowledge and Its Applications <a href="https://ai4society.github.io/planning-ontology/" target="_blank">[Website]</a></li>
-            </ol>
+              <li>
+                To get started with how we fine-tune LLMs for plan generation, explore our lab materials on 
+                <a href="https://github.com/VishalPallagani/LLMsforPlanningLab-AAAI24" target="_blank">GitHub</a>. 
+                For a detailed comparison of different language model architectures and their effectiveness in generating plans, 
+                read our benchmarking 
+                <a href="https://arxiv.org/abs/2305.16151" target="_blank">paper</a>.
+              </li>
+              <li>
+                Explore our <a href="https://github.com/ai4society/sofai_tool/tree/main" target="_blank">SOFAI Lab library</a> to understand our architecture inspired by the principles of <em>Thinking, Fast and Slow</em>, and see how it improves planning performance in 
+                <a href="https://openreview.net/pdf?id=ORAhay0H4x" target="_blank">this paper</a>.
+              </li>              
+              <li>
+                Learn how we are building a comprehensive Plan Ontology to represent and leverage planning knowledge for downstream applications. 
+                Explore the project details and resources on our 
+                <a href="https://ai4society.github.io/planning-ontology/" target="_blank">website</a>.
+              </li>
+                          </ol>
           </div>          
 
           <p style="text-align: justify;"><span style="background-color: hsl(60, 100%, 50%);"><b>Foundation Models for Planning</b></span><br>
