--- a/index.html
+++ b/index.html
@@ -90,6 +90,18 @@
                       <div class="caption">Holi Celebration @ 2024</div>
                     </div>
 
+                    
+                    <div class="mySlides">
+                      <img src="images/all-aiisc-2022-1.jpeg" style="width:100%">
+                      <div class="caption">All AIISC families @ 2022</div>
+                    </div>
+
+                    
+                    <div class="mySlides">
+                      <img src="images/all-aiisc-2022-2.jpeg" style="width:100%">
+                      <div class="caption">All AIISC families @ 2022</div>
+                    </div>
+
                     <!-- Next and previous buttons -->
                     <!-- <a class="prev" onclick="plusSlides(-1)">&#10094;</a> -->
                     <a class="next" onclick="plusSlides(1)">&#10095;</a>
