--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
                     
                     <div class="mySlides">
                       <img src="images/all-aiisc-2022-1.jpeg" style="width:100%">
-                      <div class="caption">All AIISC families @ 2022</div>
+                      <div class="caption">All AIISC faculty families @ 2022</div>
                     </div>
 
                     
                     <div class="mySlides">
                       <img src="images/all-aiisc-2022-2.jpeg" style="width:100%">
-                      <div class="caption">All AIISC families @ 2022</div>
+                      <div class="caption">All AIISC faculty families @ 2022</div>
                     </div>
 
                     <!-- Next and previous buttons -->
