--- a/projects/InfoSpread/index.html
+++ b/projects/InfoSpread/index.html
@@ -88,8 +88,8 @@
           <p><i><b>Representative Publications</b></i></p>
           <ul>
             <li>
-              <b>On Generalized Planning for Controlling Opinion Networks: Interpreting Human-AI
-              Dialog States and Beliefs</b>
+              On Generalized Planning for Controlling Opinion Networks: Interpreting Human-AI
+              Dialog States and Beliefs
               <br>
               <i><b>Authors: </b>Bharath Muppasani, Protik Nag, Biplav Srivastava, Vignesh Narayanan
               <br>
