--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                       <div class="timeline-content">
                         <p>Biplav to give a <a
                             href='https://www.csc.ncsu.edu/research/colloquia/seminar-post.php?id=1174'
-                            target="_blank">talk</a>, 'Beyond Trustworthy Machine Learning: Using Human-Inspired Computing to Help AI Earn Trust for Societal Problems' 
+                            target="_blank">talk</a>, 'From MIA to Becoming Essential: Using Human-Inspired Computing to Help AI Earn Human Trust for Societal Problems' 
                                at North Carolina State University, Raleigh, NC on 25 April 2025.
                         </p>
                       </div>
