--- a/projects/InfoSpread/index.html
+++ b/projects/InfoSpread/index.html
@@ -85,41 +85,83 @@
             In the digital age, understanding the dynamics of information spread and opinion formation within networks is paramount. This research introduces an innovative framework that combines the principles of opinion dynamics with the strategic capabilities of Automated Planning. We have developed, to the best of our knowledge, the first-ever numeric PDDL tailored for opinion dynamics. Our tool empowers users to visualize intricate networks, simulate the evolution of opinions, and strategically influence that evolution to achieve specific outcomes. By harnessing Automated Planning techniques, our framework offers a nuanced approach to devise sequences of actions tailored to transition a network from its current opinion landscape to a desired state. This holistic approach provides insights into the intricate interplay of individual nodes within a network and paves the way for targeted interventions. Furthermore, the tool facilitates human-AI collaboration, enabling users to not only understand information spread but also devise practical strategies to mitigate potential harmful outcomes arising from it.
           </p>
           
+          <!-- Representative Publications -->
           <p><i><b>Representative Publications</b></i></p>
-          <ul>
-            <li>
-              On Generalized Planning for Controlling Opinion Networks: Interpreting Human-AI
-              Dialog States and Beliefs
-              <br>
-              <i><b>Authors: </b>Bharath Muppasani, Protik Nag, Biplav Srivastava, Vignesh Narayanan
-              <br>
-              <i>Generalized Planning Workshop at the Thirty-Ninth AAAI Conference on Artificial Intelligence (AAAI-25), Philadelphia, USA,
-                Feb 2025</i><br>
-              <a href='papers_local/AAAI_25_Opinion_Dynamics_formulation_for_Dialog_Management.pdf' target="_blank">[Paper]</a>
-              <br>
+          <ul style="list-style-type: disc; padding-left: 20px; margin: 0;">
+
+            <!-- Paper 1 -->
+            <li style="margin-bottom: 20px;">
+              <div style="display: flex; align-items: flex-start;">
+                <!-- Text -->
+                <div style="flex: 1; padding-right: 10px; font-size: 15px; line-height: 1.4;">
+                  <strong>On Generalized Planning for Controlling Opinion Networks: Interpreting Human-AI Dialog States and Beliefs</strong><br>
+                  <i>Authors:</i> Bharath Muppasani, Protik Nag, Biplav Srivastava, Vignesh Narayanan<br>
+                  <i>Generalized Planning Workshop at the Thirty-Ninth AAAI Conference on Artificial Intelligence (AAAI-25), Philadelphia, USA, Feb 2025</i><br>
+                  <a href="papers_local/AAAI_25_Opinion_Dynamics_formulation_for_Dialog_Management.pdf" target="_blank">[Paper]</a>
+                </div>
+                <!-- Poster thumbnail -->
+                <div style="width: 10%; text-align: center;">
+                  <a href="images/genplan.jpg" target="_blank">
+                    <img src="images/genplan.jpg"
+                        alt="AAAI-25 Workshop Poster"
+                        style="max-width: 100%; height: auto; border: 1px solid #ccc; border-radius: 3px;">
+                  </a>
+                </div>
+              </div>
             </li>
-            <li>
-              Towards Effective Planning Strategies for Dynamic Opinion Networks<br>
-              <i><b>Authors: </b>Bharath Muppasani, Protik Nag, Vignesh Narayanan, Biplav Srivastava, Michael Huhns</i> <br>
-              <i>Thirty-eighth Annual Conference on Neural Information Processing Systems (NeurIPS), Vancouver, 2024 [Info Spread, Planning, AR=25.8%]</i><br>
-              <a href='https://openreview.net/forum?id=LYivxMp5es' target="_blank">[Paper]</a>
+
+            <!-- Paper 2 -->
+            <li style="margin-bottom: 20px;">
+              <div style="display: flex; align-items: flex-start;">
+                <div style="flex: 1; padding-right: 10px; font-size: 15px; line-height: 1.4;">
+                  <strong>Towards Effective Planning Strategies for Dynamic Opinion Networks</strong><br>
+                  <i>Authors:</i> Bharath Muppasani, Protik Nag, Vignesh Narayanan, Biplav Srivastava, Michael Huhns<br>
+                  <i>NeurIPS 2024, Vancouver (Main Track Poster)</i><br>
+                  <a href="https://openreview.net/forum?id=LYivxMp5es" target="_blank">[Paper]</a>
+                </div>
+                <div style="width: 10%; text-align: center;">
+                  <a href="images/NeurIPS-24 Poster.png" target="_blank">
+                    <img src="images/NeurIPS-24 Poster.png"
+                        alt="NeurIPS 2024 Poster"
+                        style="max-width: 100%; height: auto; border: 1px solid #ccc; border-radius: 3px;">
+                  </a>
+                </div>
+              </div>
             </li>
-            <li>
-              Expressive and Flexible Simulation of Information Spread Strategies in Social Networks Using Planning 
-              <span class="best-demo-badge">Best Demo at AAAI-24</span><br>
-              <i><b>Authors: </b>Bharath Muppasani, Vignesh Narayanan, Biplav Srivastava, Michael N. Huhns</i> <br>
-              <i>Proceedings of the Thirty-Eighth Annual Conference of Association for Advancement of Artificial Intelligence - Demonstrations Track (AAAI-24 Demo)</i><br>
-              <a href='../../publications/papers_local/InfoSpread_AAAI24_Demo.pdf' target="_blank">[Paper]</a>
-              <a href="../../publications/papers_local/AAAI-24_Demo_Poster.pdf" target="_blank">[Poster]</a>
-              <a href="https://drive.google.com/file/d/19d65zjSoFBSngCIPrteT0_DOlymmkEiM/view?usp=drive_link" target="_blank">[Video]</a>
-              <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:psGtaNc-H44J:scholar.google.com/&output=citation&scisdr=ClH8TahuEOnEo3iUe9k:AFWwaeYAAAAAZsySY9m_VkkZAY8VHu2A-E_Vn4U&scisig=AFWwaeYAAAAAZsySYxKkLZ2FvwoamhtSNpTnkPo&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1" target="_blank" type="text/plain">[BibTex]</a>
+
+            <!-- Paper 3 -->
+            <li style="margin-bottom: 20px;">
+              <div style="display: flex; align-items: flex-start;">
+                <!-- Text -->
+                <div style="flex: 1; padding-right: 10px; font-size: 15px; line-height: 1.4;">
+                  <strong>Expressive and Flexible Simulation of Information Spread Strategies in Social Networks Using Planning</strong>
+                  <span class="best-demo-badge">Best Demo at AAAI-24</span><br>
+                  <i>Authors:</i> Bharath Muppasani, Vignesh Narayanan, Biplav Srivastava, Michael Huhns<br>
+                  <i>AAAI-24 Demo Track, 2024</i><br>
+                  <a href="../../publications/papers_local/InfoSpread_AAAI24_Demo.pdf" target="_blank">[Paper]</a>
+                  <a href="../../publications/papers_local/AAAI-24_Demo_Poster.pdf" target="_blank">[Poster]</a>
+                </div>
+                <!-- Your new Demo poster thumbnail -->
+                <div style="width: 10%; text-align: center;">
+                  <a href="../../publications/papers_local/AAAI-24_Demo_Poster.pdf" target="_blank">
+                    <img src="images/aaai_demo.jpg"
+                        alt="AAAI-24 Demo Poster"
+                        style="max-width: 100%; height: auto; border: 1px solid #ccc; border-radius: 3px;">
+                  </a>
+                </div>
+              </div>
             </li>
-            <li>
-              Modeling and Steering Multi-Dimensional Opinion Networks with Aggregated Measurements<br>
-              <i><b>Authors: </b>Vignesh Narayanan, Bharath Muppasani, Sai Teja Paladi, Biplav Srivastava, Michael Huhns</i><br>
-              <i>2023 SIAM Conference on Dynamical Systems, May 2023. [Information spread, Dynamical Systems, Abstract]</i>
+
+            <!-- Paper 4 (SIAM – no poster available) -->
+            <li style="margin-bottom: 20px; font-size: 15px; line-height: 1.4;">
+              <strong>Modeling and Steering Multi-Dimensional Opinion Networks with Aggregated Measurements</strong><br>
+              <i>Authors:</i> Vignesh Narayanan, Bharath Muppasani, Sai Teja Paladi, Biplav Srivastava, Michael Huhns<br>
+              <i>SIAM Conference on Dynamical Systems, May 2023</i>
             </li>
+
           </ul>
+
+
           
           <tr style="padding:0;">
             <td style="padding-left:2.5%; width:63%; vertical-align:middle">
