--- a/projects/generalized_planning/index.html
+++ b/projects/generalized_planning/index.html
@@ -48,14 +48,14 @@
             <ol style="margin: 0; padding-left: 18px; font-size: 13.5px; color: #333; line-height: 1.6;">
               <li>
                 To get started with how we fine-tune LLMs for plan generation, explore our lab materials on 
-                <a href="https://github.com/VishalPallagani/LLMsforPlanningLab-AAAI24" target="_blank">GitHub</a>. 
+                <a href="https://github.com/VishalPallagani/LLMsforPlanningLab-AAAI24" target="_blank">GitHub (2024)</a>. 
                 For a detailed comparison of different language model architectures and their effectiveness in generating plans, 
                 read our benchmarking 
-                <a href="https://arxiv.org/abs/2305.16151" target="_blank">paper</a>.
+                <a href="https://arxiv.org/abs/2305.16151" target="_blank">paper (2023)</a>.
               </li>
               <li>
-                Explore our <a href="https://github.com/ai4society/sofai_tool/tree/main" target="_blank">SOFAI Lab library</a> to understand our architecture inspired by the principles of <em>Thinking, Fast and Slow</em>, and see how it improves planning performance in 
-                <a href="https://openreview.net/pdf?id=ORAhay0H4x" target="_blank">this paper</a>.
+                Explore our <a href="https://github.com/ai4society/sofai_tool/tree/main" target="_blank">SOFAI Lab library (2025)</a> to understand our architecture inspired by the principles of <em>Thinking, Fast and Slow</em>, and see how it improves planning performance in 
+                <a href="https://openreview.net/pdf?id=ORAhay0H4x" target="_blank">this paper (2024)</a>.
               </li>              
               <li>
                 Learn how we are building a comprehensive Plan Ontology to represent and leverage planning knowledge for downstream applications. 
@@ -91,6 +91,15 @@
           </p>
           <p><i><b>Representative Publications</b></i></p>
           <ul>
+            <li>Revisiting LLMs in Planning from Literature Review: a Semi-Automated Analysis Approach and Evolving Categories Representing Shifting Perspectives<br>
+              <i>The 35th International Conference on Automated Planning and Scheduling (ICAPS), 2025</i> <br>
+              <a href="https://ai4society.github.io/publications/papers_local/litevol.pdf" target="_blank"><b>[Paper]</b></a>
+              <a href="./bib/position.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
+              <a href="https://ai4society.github.io/LLM-Planning-Viz/" target="_blank"
+                type="text/plain"><b>[Visualization Tool]</b></a>
+              <a href="https://github.com/ai4society/LLM-Planning-Viz" target="_blank"
+                type="text/plain"><b>[Github]</b></a>
+            </li>
             <li>On the Prospects of Incorporating Large Language Models (LLMs) in Automated Planning and Scheduling
               (APS) <br>
               <i>The 34th International Conference on Automated Planning and Scheduling (ICAPS), 2024</i> <br>
