--- a/projects/generalized_planning/index.html
+++ b/projects/generalized_planning/index.html
@@ -94,7 +94,7 @@
             <li>Revisiting LLMs in Planning from Literature Review: a Semi-Automated Analysis Approach and Evolving Categories Representing Shifting Perspectives<br>
               <i>The 35th International Conference on Automated Planning and Scheduling (ICAPS), 2025</i> <br>
               <a href="https://ai4society.github.io/publications/papers_local/litevol.pdf" target="_blank"><b>[Paper]</b></a>
-              <a href="./bib/position.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
+              <a href="./bib/position-new.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
               <a href="https://ai4society.github.io/LLM-Planning-Viz/" target="_blank"
                 type="text/plain"><b>[Visualization Tool]</b></a>
               <a href="https://github.com/ai4society/LLM-Planning-Viz" target="_blank"
