--- a/publications/index.html
+++ b/publications/index.html
@@ -99,6 +99,8 @@
                                 <br>
                                 <a href='papers_local/litevol.pdf'
                                     target="_blank">[Paper]</a>
+                                <a href='https://ai4society.github.io/LLM-Planning-Viz/index.html#'
+                                    target="_blank">[Visualization Tool]</a>
                                 <span class="tag tag-type">Conference</span>
                                 <span class="tag tag-method">Planning</span>
                                 <br>
