--- a/projects/traffic-page/index.html
+++ b/projects/traffic-page/index.html
@@ -252,7 +252,7 @@
                         <li>Towards Enhancing Road Safety in South Carolina Using Insights from Traffic and Driver-Education Data<br> 
                           <i>Nitin Gupta, Bharath Muppasani, Saina Srivastava, Aarohi Goel, Ross Hartfield, Todd Buehrig, Melissa Reck, Emma Kennedy, Kevin Poore, Karilyn Tremblay, Biplav Srivastava, Lucas Vasconcelos</i>
                           <br><i>Accepted for AAAI-25 Student Abstract and Poster Program, Philadelphia, USA, Feb 2025</i>
-                          <a href="https://www.researchgate.net/publication/385590927_Towards_Enhancing_Road_Safety_in_South_Carolina_Using_Insights_from_Traffic_and_Driver-Education_Data" target="_blank">
+                          <a href="https://ojs.aaai.org/index.php/AAAI/article/view/35260" target="_blank">
                             <br><b>[Paper]</b></a>
                         </li>
                       </ul>
