--- a/projects/chatbots_page/index.html
+++ b/projects/chatbots_page/index.html
@@ -30,6 +30,7 @@
             Collaborative Assistants
           </h2>
 
+          <!-- KEY IDEA SECTION -->
           <div style="border: 2px solid #28a745; border-radius: 5px; padding: 15px; background-color: #f0fff4; box-shadow: 2px 2px 8px rgba(0,0,0,0.1); font-family: Arial, sans-serif;">
             <h4 style="margin: 0 0 5px 0; color: #28a745;">Key Idea</h4>
             <p style="margin: 0; font-size: 14.5px; line-height: 1.6; color: #333;">
@@ -37,10 +38,24 @@
             </p>
           </div> <br>
           
+          <!-- QUICK START SECTION -->
           <div style="border: 3px solid black; padding: 10px; font-family: Arial, sans-serif;">
             <p style="margin: 0 0 10px 0;">
               <b>Quick Start</b>
             </p>
+            <ol style="margin: 0; padding-left: 18px; font-size: 13.5px; color: #333; line-height: 1.6;">
+              <li>Try our <b>SafeChat HIV/AIDS Information Tool</b>: Get reliable info on HIV/AIDS (prevention, treatment, living with it) from trusted sources like UNAIDS. Ask any HIV-related questions.
+                <a href="http://129.114.27.239/" style="color: #28a745; text-decoration: none;">[Try it now]</a>
+              </li>
+              <li>Explore SafeChat framework for building trustworthy domain-specific chatbots
+                <a href="https://github.com/ai4society/trustworthy-chatbot" target="_blank" style="color: #28a745; text-decoration: none;">[GitHub]</a>
+              </li>
+            </ol>
+          </div> <br>
+
+          <!-- NEWS SECTION -->
+          <div style="border: 2px solid #0066cc; border-radius: 5px; padding: 15px; background-color: #f0f8ff; box-shadow: 2px 2px 8px rgba(0,0,0,0.1); font-family: Arial, sans-serif;">
+            <h4 style="margin: 0 0 5px 0; color: #0066cc;">News</h4>
             <ol style="margin: 0; padding-left: 18px; font-size: 13.5px; color: #333; line-height: 1.6;">
               <li><mark style="color:red;"><b>NEW!</b></mark> See ElectionBots built with SafeChat in South Carolina Elections 2024
                 <a href="elections_2024.html" style="color: #28a745; text-decoration: none;">[Demo]</a>
@@ -49,7 +64,7 @@
               <li><mark style="color:red;"><b>NEW!</b></mark> Our vision paper on AI for credible elections accepted at
               <b><i>AAAI 2025</i></b></a> in <b><i>Philadelphia, USA</i></b> <a href="./presentations/AAAI-AIElectionVision-Feb2025.pdf" target="_blank">[Slides]</a></li>
             </ol>
-          </div>
+          </div> <br>
 
           <p style="text-align: justify;"><span
               style="background-color: hsl(100, 100%, 50%);"><b>SafeChat</b></span><br>
