--- a/funding/index.html
+++ b/funding/index.html
@@ -47,13 +47,13 @@
                           target="_blank">project page</a>). [Foundation Models, Planning, Demonstration]      
                         <span class="tag tag-government-source">Government</span> </il>
 
-                      <li> NSF, 2025-2027, NAIRR Pilot Demonstration Project: A Compact Foundation Model for Planning-Like (PL) Tasks for Next Generation Trusted Applications (NAIRR250014),
-                        to support <b>compute resources</b> for <a href='https://nairrpilot.org/projects/demo/compact-foundation-model-for-pl-tasks'
+                      <li> NSF, 2025-2027, <i>Resource Request</i> for NAIRR Pilot Demonstration Project: A Compact Foundation Model for Planning-Like (PL) Tasks for Next Generation Trusted Applications (NAIRR250014),
+                        to support <b>computing</b> for <a href='https://nairrpilot.org/projects/demo/compact-foundation-model-for-pl-tasks'
                           target="_blank">NAIRR project</a>. [Resources, Foundation Models, Planning, Demonstration]      
                         <span class="tag tag-government-source">Government</span> </il>
 
-                        <li> NSF, 2025-2026, Resource Request for Privacy-Preserving Traffic Safety Analysis: A Module on Trusted AI With Real Data from Civic Partners (NAIRR250023),
-                        to support <b>teaching resources</b>. [Resources, Data Analysis, Traffic]      
+                        <li> NSF, 2025-2026, <i>Resource Request</i>  for Privacy-Preserving Traffic Safety Analysis: A Module on Trusted AI With Real Data from Civic Partners (NAIRR250023),
+                        to support <b>classroom teaching</b>. [Resources, Data Analysis, Traffic]      
                         <span class="tag tag-government-source">Government</span> </il>
                   
                     <li> VAIBHAV Fellowship, India <a href="https://dst.gov.in/prize/announcement-results-2nd-cycle-first-call-vaibhav-fellowships">(announcement)</a>, 2025-2028, 
