--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                   <!-- May 2025 -->
                     <div class="timeline-item">
                       <div class="timeline-dot"></div>
-                      <div class="timeline-date month">April</div>
+                      <div class="timeline-date month">May</div>
 
 
                       
@@ -138,6 +138,13 @@
                           on (Friday, Feb 14).
                         </p>
                       </div>
+
+                    <div class="timeline-content">
+                      <p> A new <i>resource</i> funding recieved for <b>NAIRR Pilot Demonstration Project: A Compact Foundation Model for Planning-Like (PL) Tasks for Next Generation Trusted Applications</b> (NAIRR250014), to support computing for
+                          <a href='https://nairrpilot.org/projects/demo/compact-foundation-model-for-pl-tasks'
+                    target="_blank">NSF NAIRR project</a>)  [Resources, Foundation Models, Planning, Demonstration].
+                      </p>
+                </div>
 
 
                     </div>
