--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
                       </div>
 
                     <div class="timeline-content">
-                      <p> A new <i>resource</i> funding recieved for <b>NAIRR Pilot Demonstration Project: A Compact Foundation Model for Planning-Like (PL) Tasks for Next Generation Trusted Applications</b> (NAIRR250014), to support computing for
+                      <p> A new <i>resource</i> award received for <b>NAIRR Pilot Demonstration Project: A Compact Foundation Model for Planning-Like (PL) Tasks for Next Generation Trusted Applications</b> (NAIRR250014), to support computing for
                           <a href='https://nairrpilot.org/projects/demo/compact-foundation-model-for-pl-tasks'
-                    target="_blank">NSF NAIRR project</a>)  [Resources, Foundation Models, Planning, Demonstration].
+                    target="_blank">NSF NAIRR project</a>  [Resources, Foundation Models, Planning, Demonstration].
                       </p>
                 </div>
 
@@ -182,7 +182,11 @@
                       <div class="timeline-dot"></div>
                       <div class="timeline-date month">March</div>
 
-                      
+                      <div class="timeline-content">
+                        <p> A new <i>resource</i> award received for <b>Privacy-Preserving Traffic Safety Analysis: A Module on Trusted AI With Real Data 
+                           from Civic Partners</b> (NAIRR250023), to support <b>class teaching</b> [Resources, Data Analysis, Traffic].
+                        </p>
+                      </div>
 
                       <div class="timeline-content">
                         <p>Our <a href='https://arxiv.org/abs/2412.15273'
