--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
                       
                       <div class="timeline-content">
-                        <p>Dr. Likitha was formally recognized with <a href='https://www.youtube.com/live/2SP0nz1f7_E' target="_blank">PhD hooding</a> (see 1:21:37 to 1:21:58). Dissertation defended on topic, <a
+                        <p>Dr. Likitha was formally recognized with <a href='https://www.youtube.com/live/2SP0nz1f7_E' target="_blank">PhD hooding</a> on May 8 (see 1:21:37 to 1:21:58). Dissertation defended on topic, <a
                             href='https://ai4society.github.io/members/likitha' target="_blank">Building Trustable
                             Methods for Group Recommendations: Advancing Fairness and Robustness Across Domains</a>,
                           on (Friday, Feb 14).
