--- a/members/likitha.html
+++ b/members/likitha.html
@@ -142,7 +142,6 @@
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                     </iframe>
-
                 </center>
             </div>
         </div>
@@ -225,8 +224,10 @@
         </div>
 
         <div class="abstract">
-            <h2>Related Work</h2>
-            <p>More details about further work can be found <a
+            <h2>More Details and Related Work</h2>
+            <p>More details about this work can be found at this <a
+                    href="https://github.com/ai4society/ULTRA-Team-Recommendation-Resources">GitHub repository</a>.
+                Details about ongoing and related efforts can be found <a
                     href="https://ai4society.github.io/projects/group_rec/index.html">here</a>.
             </p>
         </div>
