--- a/members/likitha.html
+++ b/members/likitha.html
@@ -128,24 +128,6 @@
             </div>
         </div>
 
-        <div class="details">
-            <div class="detail-item">
-                <strong>Doctoral Hooding</strong>
-                Hooding By: Dr. Biplav Srivastava and Dr. Ann Vail,
-                <a href="#" onclick="seekTo(4897); return false;">1:21:37</a> to
-                <a href="#" onclick="seekTo(4918); return false;">1:21:58</a>.
-
-                <center>
-                    <iframe id="ytplayer" width="700" height="400"
-                        src="https://www.youtube.com/embed/2SP0nz1f7_E?enablejsapi=1"
-                        title="The Graduate School at USC | Spring 2025 Doctoral Hooding" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-                    </iframe>
-                </center>
-            </div>
-        </div>
-
         <script>
             var player;
             function onYouTubeIframeAPIReady() {
@@ -232,7 +214,29 @@
             </p>
         </div>
 
-        <h2>Photos</h2>
+        <div class="details">
+            <div class="detail-item">
+                <h2>Doctoral Hooding</h2>
+                <p><b>Date: </b>May 8, 2025 <br>
+                    <b>Hooding By:</b> Dr. Biplav Srivastava and Dr. Ann Vail,
+                    <a href="#" onclick="seekTo(4897); return false;">1:21:37</a> to
+                    <a href="#" onclick="seekTo(4918); return false;">1:21:58</a>.
+                </p>
+
+                <center>
+                    <iframe id="ytplayer" width="700" height="400"
+                        src="https://www.youtube.com/embed/2SP0nz1f7_E?enablejsapi=1"
+                        title="The Graduate School at USC | Spring 2025 Doctoral Hooding" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                    </iframe>
+                </center>
+            </div>
+        </div>
+
+        <h2>Photos (Ph.D. Defense)</h2>
+        <strong>Date:</strong><br><br> February 14, 2025
+
         <div class="details">
             <div class="detail-item">
                 <img src="dissertation_likitha_photos/1.JPG" alt="1" style="width:100%;">
