--- a/projects/group_rec/index.html
+++ b/projects/group_rec/index.html
@@ -395,7 +395,7 @@
                 <img id="myImg1" src="images/Recipe-Translation-Picture.jpg"
                   alt="Recipe Translation"
                   style="width:100%;max-width:100px;height:120px;">[2025] An empirical study on the use of Large Language Models (LLMs) to translate recipes into a
-                  semi-structured data format
+                  semi-structured data format <br>
                   <i>Conference Poster at the National Big Data and Health Science Conference</i><br>
                   <a href="./bib/Recipe-Translation-Poster.pdf" target="_blank" type="text/plain"><b>[Poster]</b></a>
                 </li>
@@ -403,7 +403,7 @@
                 <br>
                 <li>[2024] A Novel Approach to Balance Convenience and Nutrition in Meals With Long-Term Group
                   Recommendations and Reasoning on Multimodal Recipes and its Implementation in BEACON<br>
-                  <i>Arxiv Preprint</i><br>
+                  Presented at <i>National Big Data and Health Science Conference 2025</i><br> as <i>A Digital Twin for Increasing Adherence to Dietary Guidelines with Personalized, AI-Driven, Long Duration Meal Recommendations.</i>
                   <a href="https://arxiv.org/abs/2412.17910" target="_blank"><b>[Paper]</b></a>
                   <a href="./bib/beacon-part2.bib" target="_blank" type="text/plain"><b>[BibTex]</b></a>
                   <br>
