Adding graduation photo

--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
                       <div class="caption">Holi Celebration @ 2024</div>
                     </div>
 
+                    <div class="mySlides">
+                      <img src="images/undergraduates_may2025.jpg" style="width:100%">
+                      <div class="caption">Recent Graduates - May '25</div>
+                    </div>
                     
                     <div class="mySlides">
                       <img src="images/all-aiisc-2022-1.jpg" style="width:100%">
@@ -129,7 +133,9 @@
                       <div class="timeline-dot"></div>
                       <div class="timeline-date month">May</div>
 
-
+                      <div class="timeline-content">
+                        <p>We're proud to announce that 4 of our undergraduate members have successfully graduated in May 2025: John Aydin, Rae Jones, Vansh Nagpal, and Nitin Gupta. <a href="images/undergraduates_may2025.jpg" target="_blank">Three of them</a> celebrating their graduation during the commencement ceremony.</p>
+                      </div>
                       
                       <div class="timeline-content">
                         <p>Dr. Likitha was formally recognized with <a href='https://www.youtube.com/live/2SP0nz1f7_E' target="_blank">PhD hooding</a> on May 8 (see 1:21:37 to 1:21:58). Dissertation defended on topic, <a
