update members & homepage

--- a/members/index.html
+++ b/members/index.html
@@ -159,21 +159,6 @@
                 <td style="padding-left:2.5%;width:63%;vertical-align:middle">
                     <h2>Undergraduate Students</h2>
                     <div class="grid">
-                        <img src="images_members/rae.jpg">
-                        <figcaption style="padding-top: -10%;">
-                            <b>Rae Jones</b><br><br>
-                            <a target="_blank" href="https://www.linkedin.com/in/rae-jones-204ba3276/">Homepage</a>,
-                            <a target="_blank" href="mailto:sej15@email.sc.edu">sej15@email.sc.edu</a>
-                            <br><br>
-                            Research Interests:
-                            <span class="tag tag-method">Trust Rating</span>,
-                            <span class="tag tag-method">Chatbots</span>
-                            <br><br>
-                            Domains:
-                            <span class="tag tag-domain">Elections</span>
-                            <br><br>
-                        </figcaption>
-
                         <img src="images_members/nitin.jpg">
                         <figcaption style="padding-top: -10%;">
                             <b>Nitin Gupta</b><br><br>
@@ -189,20 +174,15 @@
                             <br><br>
                         </figcaption>
 
-                        <img src="images_members/vansh.jpg">
+                        <img src="images_members/john.jpg">
                         <figcaption style="padding-top: -10%;">
-                            <b>Vansh Nagpal</b><br><br>
-                            <a target="_blank" href="https://vnagpal25.github.io/">Homepage</a>,
-                            <a target="_blank" href="mailto:vnagpal@email.sc.edu">vnagpal@email.sc.edu</a>
+                            <b>John Aydin</b><br><br>
+                            <a target="_blank" href="https://github.com/John-A-Aydin">Homepage</a>,
+                            <a target="_blank" href="mailto:jaaydin@email.sc.edu">jaaydin@email.sc.edu</a>
                             <br><br>
                             Research Interests:
-                            <span class="tag tag-method">Recommender Systems</span>,
                             <span class="tag tag-method">Chatbots</span>,
                             <span class="tag tag-method">Neuro-Symbolic AI</span>
-                            <br><br>
-                            Domains:
-                            <span class="tag tag-domain">Public Health</span>,
-                            <span class="tag tag-domain">Water</span>
                             <br><br>
                         </figcaption>
 
@@ -214,7 +194,7 @@
                 </td>
             </tr>
 
-                        <tr style="padding:0px">
+                <tr style="padding:0px">
                 <td style="padding-left:2.5%;width:63%;vertical-align:middle">
                     <h2>Adjunct Students</h2>
                     <div class="grid">
@@ -245,6 +225,38 @@
                 <td style="padding-left:2.5%;width:63%;vertical-align:middle">
                     <h2>Alumni</h2>
                     <div class="grid">
+                        <img src="images_members/rae.jpg">
+                        <figcaption style="padding-top: -10%;">
+                            <b>Rae Jones</b><br><br>
+                            <a target="_blank" href="https://www.linkedin.com/in/rae-jones-204ba3276/">Homepage</a>,
+                            <a target="_blank" href="mailto:sej15@email.sc.edu">sej15@email.sc.edu</a>
+                            <br><br>
+                            Research Interests:
+                            <span class="tag tag-method">Trust Rating</span>,
+                            <span class="tag tag-method">Chatbots</span>
+                            <br><br>
+                            Domains:
+                            <span class="tag tag-domain">Elections</span>
+                            <br><br>
+                        </figcaption>
+                        
+                        <img src="images_members/vansh.jpg">
+                        <figcaption style="padding-top: -10%;">
+                            <b>Vansh Nagpal</b><br><br>
+                            <a target="_blank" href="https://vnagpal25.github.io/">Homepage</a>,
+                            <a target="_blank" href="mailto:vnagpal@email.sc.edu">vnagpal@email.sc.edu</a>
+                            <br><br>
+                            Research Interests:
+                            <span class="tag tag-method">Recommender Systems</span>,
+                            <span class="tag tag-method">Chatbots</span>,
+                            <span class="tag tag-method">Neuro-Symbolic AI</span>
+                            <br><br>
+                            Domains:
+                            <span class="tag tag-domain">Public Health</span>,
+                            <span class="tag tag-domain">Water</span>
+                            <br><br>
+                        </figcaption>
+
                         <img src="images_members/teja.jpg">
                         <figcaption style="padding-top: -10%;">
                             <b>Sai Teja Paladi</b><br><br>
@@ -257,11 +269,12 @@
                             <br><br>
                         </figcaption>
 
+                        
                         <!--Leave this in as placeholder.-->
-                        <figcaption style="padding-top: -10%;">
+                        <!-- <figcaption style="padding-top: -10%;">
                             &nbsp
-                        </figcaption>
-
+                        </figcaption> -->
+                    </div>
                 </td>
             </tr>
 
