--- a/projects/InfoSpread/index.html
+++ b/projects/InfoSpread/index.html
@@ -67,12 +67,9 @@
                 <a href="https://drive.google.com/file/d/19d65zjSoFBSngCIPrteT0_DOlymmkEiM/view?usp=drive_link" target="_blank" style="color: #007acc; text-decoration: none;">Demo Video</a>.
               </li>
               <li>
-                <strong>NeurIPS Paper</strong> detailing planning strategies for dynamic opinion networks.
+                Read our <strong>NeurIPS Paper</strong> detailing planning strategies for dynamic opinion networks.
                 Resource: <mark style="background-color: #fff3cd; color: #856404;">[Paper]</mark>
                 <a href="https://openreview.net/forum?id=LYivxMp5es" target="_blank" style="color: #007acc; text-decoration: none;">Read Paper</a>.
-              </li>
-              <li>
-                <strong>SIAM Abstract</strong> for insights into modeling multi-dimensional opinion networks.
               </li>
             </ol>
           </div>
