--- a/planfm/publications.html
+++ b/planfm/publications.html
@@ -32,6 +32,15 @@
     <section class="publications">
       <h2>Research Publications</h2>
 
+        <div class="pub-entry">
+        <h3 class="pub-title">FABLE: A Novel Data-Flow Analysis Benchmark on Procedural Text for Large Language Model Evaluation</h3>
+        <p class="pub-authors">Vishal Pallagani, Nitin Gupta, John Aydin, Biplav Srivastava</p>
+        <p class="pub-venue">Preprint</p>
+        <div class="pub-links">
+          <a href="https://arxiv.org/abs/2505.24258" target="_blank">[Paper]</a>
+        </div>
+      </div>
+      
       <div class="pub-entry">
         <h3 class="pub-title">The Case for Developing a Foundation Model for Planning-like Tasks from Scratch</h3>
         <p class="pub-authors">Biplav Srivastava, Vishal Pallagani</p>
