--- a/planfm/team.html
+++ b/planfm/team.html
@@ -41,6 +41,10 @@
           <p>PhD Candidate</p>
         </div>
         <div class="team-card">
+          <h3>Nitin Gupta</h3>
+          <p>Graduate Student</p>
+        </div>
+        <div class="team-card">
           <h3>John Aydin</h3>
           <p>Undergraduate Student</p>
         </div>
