--- a/planfm/publications.html
+++ b/planfm/publications.html
@@ -35,7 +35,7 @@
         <div class="pub-entry">
         <h3 class="pub-title">FABLE: A Novel Data-Flow Analysis Benchmark on Procedural Text for Large Language Model Evaluation</h3>
         <p class="pub-authors">Vishal Pallagani, Nitin Gupta, John Aydin, Biplav Srivastava</p>
-        <p class="pub-venue">Preprint</p>
+        <p class="pub-venue">Preprint, May 2025</p>
         <div class="pub-links">
           <a href="https://arxiv.org/abs/2505.24258" target="_blank">[Paper]</a>
         </div>
@@ -53,7 +53,7 @@
       <div class="pub-entry">
         <h3 class="pub-title">PLANTS: A Novel Problem and Dataset for Summarization of Planning-Like (PL) Tasks</h3>
         <p class="pub-authors">Vishal Pallagani, Biplav Srivastava, Nitin Gupta</p>
-        <p class="pub-venue">Preprint</p>
+        <p class="pub-venue">Preprint, May 2024</p>
         <div class="pub-links">
           <a href="https://arxiv.org/abs/2407.13597" target="_blank">[Paper]</a>
           <a href="https://huggingface.co/datasets/vishalp/PLANTS-Benchmark" target="_blank">[Dataset]</a>
