--- a/planfm/index.html
+++ b/planfm/index.html
@@ -53,7 +53,23 @@
             AI foundation models, optimized primarily for next-token prediction, excel in generating coherent and contextually relevant text, making them effective for natural language and conversational agents. However, these models exhibit significant limitations when applied to tasks from real-world applications requiring sequential decision making, reasoning, and other planning-like tasks. Examples include business processes, guidelines, instructions, programs, and workflows. Previous work on this topic using foundation models has primarily focused on using or fine-tuning pre-trained, off-the-shelf models with limited success. This project will instead investigate a different approach, creating a comprehensive, yet compact, foundation model for planning-like tasks from scratch. This model will be based on innovative approaches for tokenization, training, and other steps that will enable the model to specialize in advanced planning. The project will follow a transparent, bottom-up methodology for building this new model that will open new avenues for research, education, and real-world applications.
         </p>
       </section>
-      
+
+        <section id="funding-info" class="funding-info">
+        <h2>Funding Information</h2>
+
+           <ul class="funding-list pi-list">
+                    <li> NSF, 2025-2027, <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2454027&HistoricalAwards=false"> NSF (EAGER) NAIRR Pilot: Demonstrating a Compact Foundation Model for Planning-Like(PL) Tasks for Next Generation Trusted Applications</a>  
+                          (see also: <a href='https://nairrpilot.org/projects/demo/compact-foundation-model-for-pl-tasks'
+                          target="_blank">project page</a>). [Foundation Models, Planning, Demonstration]      
+                        <span class="tag tag-government-source">Government</span> </il>
+
+                      <li> NSF, 2025-2027, <i>Resource Request</i> for NAIRR Pilot Demonstration Project: A Compact Foundation Model for Planning-Like (PL) Tasks for Next Generation Trusted Applications (NAIRR250014),
+                        to support <b>computing</b> for <a href='https://nairrpilot.org/projects/demo/compact-foundation-model-for-pl-tasks'
+                          target="_blank">NAIRR project</a>. [Resources, Foundation Models, Planning, Demonstration]      
+                        <span class="tag tag-government-source">Government</span> </il>
+           </ul>
+
+      </section>
 
   </main>
   
