--- a/demos/index.html
+++ b/demos/index.html
@@ -353,7 +353,7 @@
               transparently connecting the document to insight elements.</p>
             <a href="https://www.researchgate.net/profile/Biplav-Srivastava/publication/363608853_KITE_-_An_Unsupervised_Effective_and_Inclusive_Approach_for_Textual_Content_Exploration/links/6324a33a071ea12e363a790e/KITE-An-Unsupervised-Effective-and-Inclusive-Approach-for-Textual-Content-Exploration.pdf"
               target="_blank" rel="noopener noreferrer">[Paper]</a>
-            <a href="https://drive.google.com/file/d/1kIFcBaRzm0HBm2IOwJ-COLFTfMGGiDUh/view?usp=drive_link" target="_blank">[Demo Video]</b></a>
+            <a href="https://youtu.be/QoXd-6Gnjlo" target="_blank">[Demo Video]</b></a>
             <a href="http://casy.cse.sc.edu/kite" target="_blank" rel="noopener noreferrer">[Tool]</a>
             <a href="../projects/teaming/bib/kite.txt" target="_blank" type="text/plain">[BibTex]</a>
             <!-- <a href="../projects/teaming/index.html" target="_blank" type="text/plain">[More Details]</a> -->
