--- a/index.html
+++ b/index.html
@@ -128,6 +128,23 @@
                       <div class="timeline-date year">2025</div>
                     </div>
 
+        
+                  <!-- June 2025 -->
+                    <div class="timeline-item">
+                      <div class="timeline-dot"></div>
+                      <div class="timeline-date month">June</div>
+
+                    <div class="timeline-content">
+                      <p> We released the python package <a href='https://pypi.org/project/GAICo/' target="_blank">gaico</a>, 
+                        <i>GenAI Results Comparator</i>, to help compare, analyze and visualize outputs from Large Language Models (LLMs).
+                         [Python, Foundation Models, Library].
+                      </p>
+                </div>
+
+
+                    </div>
+                    <!-- End of June 2025 -->
+ 
                   <!-- May 2025 -->
                     <div class="timeline-item">
                       <div class="timeline-dot"></div>
