--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                       <div class="timeline-date month">June</div>
 
                     <div class="timeline-content">
-                      <p> We released the python package <a href='https://pypi.org/project/GAICo/' target="_blank">gaico</a>, 
+                      <p> We released the python package, <a href='https://pypi.org/project/GAICo/' target="_blank"><b>gaico</b>gaico</a>, 
                         <i>GenAI Results Comparator</i>, to help compare, analyze and visualize outputs from Large Language Models (LLMs).
                          [Python, Foundation Models, Library].
                       </p>
