--- a/index.html
+++ b/index.html
@@ -136,10 +136,17 @@
 
                     <div class="timeline-content">
                       <p> We released the python package, <a href='https://pypi.org/project/GAICo/' target="_blank"><b>gaico</b></a>, 
-                        <i>GenAI Results Comparator</i>, to help compare, analyze and visualize outputs from Large Language Models (LLMs).
+                        <i>GenAI Results Comparator</i>, to help compare, analyze and visualize outputs from Large Language Models (LLMs)
                          [Python, Foundation Models, Library].
                       </p>
-                </div>
+                    </div>
+
+                      <div class="timeline-content">
+                       <p> Three projects get USC internal funding (1 as PI, 2 as Co-PI) to develop concepts of safe chatbots  
+                            using neuro-symbolic methods with applications in medical student
+                           training and archival (library) data [Chatbots, Neuro-symbolic].
+                      </p>
+                    </div>
 
 
                     </div>
