--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                       <div class="timeline-content">
                        <p> Three projects get USC internal funding (1 as PI, 2 as Co-PI) to develop concepts of safe chatbots  
                             using neuro-symbolic methods with applications in medical student
-                           training and archival (library) data [Chatbots, Neuro-symbolic].
+                           training and archival (library) information accessibility [Chatbots, Neuro-symbolic].
                       </p>
                     </div>
 
