--- a/planfm/index.html
+++ b/planfm/index.html
@@ -40,7 +40,10 @@
     <section class="updates">
       <h2>Recent Updates</h2>
       <ul class="updates-list">
-        <li>May 2025 – paper titled <a href="https://arxiv.org/abs/2505.24258">FABLE: A Novel Data-Flow Analysis Benchmark on Procedural Text for Large Language Model Evaluation</a> released on data analysis with plans, travel routes, and recipes representing automated, semi-automated and manual workflows, respectively.</li>
+        <li>June 2025 – released the python package, <a href='https://pypi.org/project/GAICo/' target="_blank"><b>gaico</b></a>, 
+                        <i>GenAI Results Comparator (GAICo)</i>, to help compare, analyze and visualize outputs from Large Language Models (LLMs)
+                         consistently [Python, Foundation Models, Library].</li>
+         <li>May 2025 – paper titled <a href="https://arxiv.org/abs/2505.24258">FABLE: A Novel Data-Flow Analysis Benchmark on Procedural Text for Large Language Model Evaluation</a> released on data analysis with plans, travel routes, and recipes representing automated, semi-automated and manual workflows, respectively.</li>
         <li>Apr 2025 – NAIRR compute resources awarded - NAIRR250014</li>
         <li>Jan 2025 – Project kickoff and initial team meeting</li>
       </ul>
