--- a/publications/index.html
+++ b/publications/index.html
@@ -91,7 +91,7 @@
 
 
                         
-                            <li><b>FABLE: A Novel Data-Flow Analysis Benchmark on Procedural Text for Large Language Model Evaluation</b>
+                            <li><b>FABLE: A Novel Data-Flow Analysis Benchmark on Procedural Text for Large Language Model Evaluation</b><br>
                         <i>Preprint, May 2024</i><br>
                             Vishal Pallagani, Nitin Gupta, John Aydin, Biplav Srivastava
                               <br>
@@ -103,11 +103,11 @@
                               <br>
                            </li>
                             
-                            <li><b>SafeChat: A Framework for Building Trustworthy Collaborative Assistants and a Case Study of its Usefulness</b>
+                            <li><b>SafeChat: A Framework for Building Trustworthy Collaborative Assistants and a Case Study of its Usefulness</b><br>
                             <i>Preprint, April 2024</i><br>
                             Biplav Srivastava, Kausik Lakkaraju, Nitin Gupta, Vansh Nagpal, Bharath C. Muppasani, Sara E. Jones
                               <br>
-                                <a href='https://arxiv.org/abs/2504.07995' target="_blank">[Paper]</a>, 
+                                <a href='https://arxiv.org/abs/2504.07995' target="_blank">[Paper]</a>
                                 <span class="tag tag-type">Preprint</span>
                                 <span class="tag tag-method">Chatbots</span>
                                 <span class="tag tag-method">Elections</span>
@@ -207,7 +207,7 @@
                                 <br>
                             </li>
 
-                            <li><b>On Creating a Causally Grounded Usable Rating Method for Assessing the Robustness of Foundation Models Supporting Time Series</b>
+                            <li><b>On Creating a Causally Grounded Usable Rating Method for Assessing the Robustness of Foundation Models Supporting Time Series</b><br>
                                <i>Preprint, February 2025</i><br>
                                Kausik Lakkaraju, Rachneet Kaur, Parisa Zehtabi, Sunandita Patra, Siva Likitha Valluru, Zhen Zeng, Biplav Srivastava, Marco Valtorta
                                <br>
@@ -257,7 +257,7 @@
 
                             <li><b>A Novel Approach to Balance Convenience and Nutrition in Meals With Long-Term Group
                                     Recommendations and Reasoning on Multimodal Recipes and its Implementation in
-                                    BEACON</b>
+                                    BEACON</b><br>
                                 <i>Preprint, Dec 2024</i><br>
                                 Vansh Nagpal, Siva Likitha Valluru, Kausik Lakkaraju, Nitin Gupta, Zach Abdulrahman,
                                 Andrew Davison, Biplav Srivastava
@@ -284,8 +284,8 @@
                            </li>
 
                             <li><b>BEACON: Balancing Convenience and Nutrition in Meals With Long-Term Group
-                                    Recommendations and Reasoning on Multimodal Recipes</b>
-                                </i><br>
+                                    Recommendations and Reasoning on Multimodal Recipes</b><br>
+                                <br>Preprint, June 2024</i><br>
                                 Vansh Nagpal, Siva Likitha Valluru, Kausik Lakkaraju, Biplav Srivastava
                                 <br>
                                 <a href='https://arxiv.org/abs/2406.13714' target="_blank">[Paper]</a>
@@ -388,7 +388,7 @@
                                 Vishal Pallagani, Bharath Muppasani, Kaushik Roy, Francesco Fabiano, Andrea Loreggia,
                                 Keerthiram Murugesan, Biplav Srivastava, Francesca Rossi, Lior Horesh, Amit Sheth<br>
                                 <a href='https://arxiv.org/abs/2401.02500' target="_blank">[Paper]</a>
-                                <span class="tag tag-type">Preprint</span>
+                                <span class="tag tag-type">Conference</span>
                                 <span class="tag tag-method">Automated Planning</span>
                                 <span class="tag tag-method">Neuro-Symbolic AI</span>
                                 <br>
@@ -447,6 +447,7 @@
 
                             <li><b>Understanding the Capabilities of Large Language Models for Automated
                                     Planning</b><br>
+                                <i>Preprint, May 2023</i><br>
                                 Vishal Pallagani, Bharath Muppasani, Keerthiram Murugesan, Francesca Rossi, Biplav
                                 Srivastava, Lior Horesh, Francesco Fabiano, Andrea Loreggia<br>
                                 <a href='https://arxiv.org/abs/2305.16151' target="_blank">[Paper]</a>
@@ -456,6 +457,7 @@
                                                    </li>
 
                             <li><b>Fast and Slow Planning</b><br>
+                                <i>Preprint, March 2023</i><br>
                                 Francesco Fabiano, Vishal Pallagani, Marianna Bergamaschi Ganapini, Lior Horesh, Andrea
                                 Loreggia, Keerthiram Murugesan, Francesca Rossi, Biplav Srivastava<br>
                                 <a href='https://arxiv.org/abs/2303.04283' target="_blank">[Paper]</a>
@@ -507,10 +509,10 @@
 
 
                             <li><b>Evaluating Chatbots to Promote Users' Trust -- Practices and Open Problems</b><br>
-                                <!-- <i>IEEE Transactions on Technology and Society</i> -->
+                                <i>Preprint, Sep 2023</i><br>
                                 Biplav Srivastava, Kausik Lakkaraju, Tarmo Koppel, Vignesh Narayanan, Ashish Kundu,
                                 Sachindra Joshi <br>
-                                <a href='https://arxiv.org/pdf/2309.05680.pdf' target="_blank">[Paper]</a>
+                                <a href='https://arxiv.org/abs/2309.05680' target="_blank">[Paper]</a>
                                 <span class="tag tag-type">Preprint</span>
                                 <span class="tag tag-method">Chatbots</span>
                                 <br>
